--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--  https://files-sharing-app.netlify.app/ -->
     <!-- <img src="./logo.png" alt="Inshare logo" class="logo"> -->
     <section class="upload-container">
         <form action="">
@@ -68,7 +69,7 @@
         
     </section>
     <!-- <div class="image-vector"></div> -->
-    <div class="toast">Sample message</div>
+    <div class="toast">Sample Message</div>
    
 
 
@@ -76,3 +77,4 @@
 </body>
 
 </html>
+
